Closed
Bug 1987107
Opened 10 months ago
Closed 10 months ago
Introduce libmozinference, initially containing llama.cpp and libggml
Categories
(Core :: Machine Learning: General, defect)
Core
Machine Learning: General
Tracking
()
RESOLVED
FIXED
144 Branch
| Tracking | Status | |
|---|---|---|
| firefox144 | --- | fixed |
People
(Reporter: padenot, Assigned: padenot, NeedInfo)
References
Details
Attachments
(2 files, 1 obsolete file)
I'll add whisper.cpp shortly for speech recognition (that consists in only a few files, most of the code is in libggml).
| Assignee | ||
Comment 1•10 months ago
|
||
| Assignee | ||
Comment 2•10 months ago
|
||
Updated•10 months ago
|
Attachment #9511637 -
Attachment is obsolete: true
| Assignee | ||
Updated•10 months ago
|
Assignee: nobody → padenot
Updated•10 months ago
|
Attachment #9511638 -
Attachment description: WIP: Bug 1987107 - Introduce libmozinference, initially containing llama.cpp and libggml → Bug 1987107 - Introduce libmozinference, initially containing llama.cpp and libggml. r?#firefox-build-system-reviewers
| Assignee | ||
Comment 3•10 months ago
|
||
| Assignee | ||
Comment 4•10 months ago
|
||
https://treeherder.mozilla.org/jobs?repo=try&revision=608d33d8044f00f4caea60438d275509616da514
https://treeherder.mozilla.org/jobs?repo=try&revision=3445cc1e3c3bc5f83532893b9f4bea6827ce0e33
(needed to link a couple libs on windows so this needed 2 try pushed)
Pushed by padenot@mozilla.com:
https://github.com/mozilla-firefox/firefox/commit/21a26f57a982
https://hg.mozilla.org/integration/autoland/rev/3dae653317ca
Introduce libmozinference, initially containing llama.cpp and libggml. r=firefox-build-system-reviewers,atossou,ahochheiden
https://github.com/mozilla-firefox/firefox/commit/561bfdad0f01
https://hg.mozilla.org/integration/autoland/rev/154a86db79bb
Re-enable AVX2 when compiling llama.cpp. r=atossou
https://github.com/mozilla-firefox/firefox/commit/f9800ede06e4
https://hg.mozilla.org/integration/autoland/rev/e13439399e7a
apply code formatting via Lando
Pushed by sstanca@mozilla.com:
https://github.com/mozilla-firefox/firefox/commit/fd633a3612fb
https://hg.mozilla.org/integration/autoland/rev/17fa5610b4e3
Revert "Bug 1987107: apply code formatting via Lando" for causing build bustages.
Comment 7•10 months ago
|
||
Reverted this because it was causing build bustages.
- Revert link
- Push with failures
- Failure Log
- Failure line: ld.lld: error: version script assignment of 'libmozinference.so' to symbol 'ggml_threadpool_free' failed: symbol not defined
Flags: needinfo?(padenot)
Pushed by padenot@mozilla.com:
https://github.com/mozilla-firefox/firefox/commit/ae503e8c691e
https://hg.mozilla.org/integration/autoland/rev/6712f5a99300
Introduce libmozinference, initially containing llama.cpp and libggml. r=firefox-build-system-reviewers,atossou,ahochheiden
https://github.com/mozilla-firefox/firefox/commit/ead1ab67eace
https://hg.mozilla.org/integration/autoland/rev/e6b18de90d7b
Re-enable AVX2 when compiling llama.cpp. r=atossou
https://github.com/mozilla-firefox/firefox/commit/c38a7a5cbd35
https://hg.mozilla.org/integration/autoland/rev/a4eef4031ec9
apply code formatting via Lando
Comment 9•10 months ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/6712f5a99300
https://hg.mozilla.org/mozilla-central/rev/e6b18de90d7b
https://hg.mozilla.org/mozilla-central/rev/a4eef4031ec9
Status: NEW → RESOLVED
Closed: 10 months ago
status-firefox144:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 144 Branch
Updated•10 months ago
|
QA Whiteboard: [qa-triage-done-c145/b144]
You need to log in
before you can comment on or make changes to this bug.
Description
•