Bug 1987107: apply code formatting via Lando

# ignore-this-changeset